fix: white space

--- a/src/styles/components/Tabs.pcss
+++ b/src/styles/components/Tabs.pcss
@@ -17,6 +17,7 @@
 
     &-container {
       width: 100%;
+      white-space: nowrap;
     }
 
     & > .typography {
